--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ nav.nav ul li a:hover::after{transform:scaleX(1);transform-origin:left}
 .carousel-nav{display:flex;gap:.75rem}
 .carousel-btn{width:44px;height:44px;border-radius:50%;border:1px solid var(--black);background:var(--black);color:var(--white);display:flex;align-items:center;justify-content:center;cursor:pointer;transition:all .2s;font-size:1rem}
 .carousel-btn:hover{background:transparent;color:var(--black);border-color:var(--black)}
-.carousel-track-wrap{overflow-x:auto;scrollbar-width:none;-ms-overflow-style:none;-webkit-overflow-scrolling:touch;touch-action:pan-x;scroll-snap-type:x mandatory}.carousel-track-wrap::-webkit-scrollbar{display:none}
+.carousel-track-wrap{overflow-x:auto;scrollbar-width:none;-ms-overflow-style:none;-webkit-overflow-scrolling:touch;scroll-snap-type:x mandatory}.carousel-track-wrap::-webkit-scrollbar{display:none}
 .carousel-track{display:flex;gap:1.5rem;will-change:scroll-position;transform:translateZ(0)}
 .carousel-card{flex:0 0 300px;border-radius:12px;overflow:hidden;cursor:pointer;background:var(--grey);transition:transform .3s ease;position:relative;scroll-snap-align:start}
 @media(max-width:700px){.carousel-card{flex:0 0 220px}}
